// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should render empty list 1`] = `
<div>
  <div
    aria-label="list"
    data-list=""
    role="listbox"
    tabindex="0"
  >
    <div
      data-list-empty=""
    >
      <p>
        No items found
      </p>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`List > should render simple list 1`] = `
<div>
  <div
    aria-label="list"
    class="custom-class"
    data-list=""
    role="listbox"
    tabindex="0"
  >
    <!---->
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="0"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 1
      </p>
      <!---->
      
      <!---->
    </div>
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="1"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 2
      </p>
      <!---->
      
      <!---->
    </div>
    
    <!---->
  </div>
  
</div>
`;

exports[`List > should render simple list 2`] = `
<div>
  <div
    aria-label="list"
    class="another-class"
    data-list=""
    role="listbox"
    tabindex="0"
  >
    <!---->
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="0"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 1
      </p>
      <!---->
      
      <!---->
    </div>
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="1"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 2
      </p>
      <!---->
      
      <!---->
    </div>
    
    <!---->
  </div>
  
</div>
`;

exports[`List > should render with custom components 1`] = `
<div>
  <!---->
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    aria-label="list"
    data-list=""
    role="listbox"
    tabindex="0"
  >
    <!---->
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="0"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 1
      </p>
      <!---->
      
      <!---->
    </div>
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="1"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 2
      </p>
      <!---->
      
      <!---->
    </div>
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="2"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 3
      </p>
      <!---->
      
      <!---->
    </div>
    <div
      aria-current="false"
      aria-selected="false"
      data-list-item=""
      data-path="3"
      role="option"
    >
      <!---->
      <!---->
      <!---->
      
      <!---->
       
      <p>
        Item 4
      </p>
      <!---->
      
      <!---->
    </div>
    
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`List > should render with custom empty 1`] = `
<div>
  <!---->
  <!---->
   
  <!---->
   
  <div
    aria-label="list"
    data-list=""
    role="listbox"
    tabindex="0"
  >
    <div
      data-list-empty=""
    >
      <!---->
      <h1>
        Custom empty message
      </h1>
      
      <!---->
    </div>
    <!---->
  </div>
  <!---->
   
  <!---->
  
</div>
`;
